<resources>
    <string name="register">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="app_name">PetBox</string>
    <string name="glad_message"> We are glad to see you! </string>
    <string name="without_registration"><u>Войти без регистрации</u></string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="date_of_birth"><u>Date of Birth                                 </u></string>
    <string name="more">Подробнее</string>
    <string name="pets">Питомцев</string>
    <string name="posts">Постов</string>
    <string name="bord">Доска объявлений</string>
    <string name="find_friend">  Найдите друга для себя</string>
    <string name="filter">Фильтры</string>
    <string name="sort">Сортировки</string>
    <string name="reset">Сбросить</string>
    <string name="show_animals">Показать</string>
    <string name="age">Возраст</string>
    <string name="color">Окрас</string>
    <string name="breed">Порода</string>
    <string name="city">Город</string>
    <string name="gender">Пол</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="yaers5">5 лет</string>
    <string name="small_age">     от 0 м.   до 5 м.</string>
    <string name="medium_age">     от 6 м.   до 11 м.</string>
    <string name="adult_age">     от 1 г.   до 5 л.</string>
    <string name="orange">  рыжий</string>
    <string name="white">  белый</string>
    <string name="gray">  серый</string>
    <string name="black">  чёрный</string>
    <string name="turtle">  разноцветный</string>
    <string name="cats">коты</string>
    <string name="dogs">собаки</string>
    <string name="others">другие</string>
    <string name="create_animal">Создание объявления</string>
    <string name="which_animal">Какое животное?</string>
    <string name="petsName">Имя питомца</string>
    <string name="boy">мальчик</string>
    <string name="girl">девочка</string>
    <string name="describe_the_animal">Опишите животное\n(его характер,что оно умеет и т.д.)</string>
    <string name="create">Создать</string>
    <string name="ad">Объявлений</string>
    <string name="accept_filter">Принять  фильтр</string>
    <string name="to_sort">Сортировать</string>
    <string name="sortByDateFromNew">  сначала новые по дате публикации </string>
    <string name="sortByDareFromOld">  сначала старые по дате публикации </string>
    <string name="sortByAgeFromSmall">   сначала маленькие </string>
    <string name="sortByAgeToOld">   сначала взрослые</string>
    <string name="sortByAlphabetUp">   по алфавиту </string>
    <string name="sortByUrgency">   сначала срочные</string>
    <string name="shelterName">Название приюта</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="password">Пароль</string>
    <string name="confirnPassword">Подтвердите пароль</string>
    <string name="whichTypeOfHelp">Укажите тип помощи</string>
    <string name="helpDescription">Добавьте описание\n(расcкажите какая именно помощь вам нужна)</string>
    <string name="animal">Животное</string>
    <string name="animals">Животные</string>
    <string name="help">Помощь</string>

    <string name="material">Материальная</string>
    <string name="professional">Проффесиональная</string>
    <string name="shelter_arrangment">Обустройство приюта</string>
    <string name="timeWithAnimals">Время с животными</string>
    <string name="volonteeringAtEvents">Волонтёрство на мероприятиях</string>
    <string name="notEnterIFMessage">Если вы являетесь владельцем или работником приюта, </string>
    <string name="notEnterDOMessage"> Войдите или зарегистрируйтесь и размещайте своих питомцев и объявления c просьбой о помощи</string>
    <string name="findShelter">Введите название приюта</string>

    <string name="edit">Редактировать</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить запись</string>
    <string name="exit">Выйти</string>


</resources>
