<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Creation2Fragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="55dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/background"
                android:src="@drawable/ic_arrow_left"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/filter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_animal"
                android:textSize="18sp"
                android:textColor="@color/greyText"
                android:fontFamily="@font/inriasans_light"
                android:layout_gravity="center_vertical"
                />

            <Button
                android:id="@+id/create_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inriasans_light"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/greyText"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:background="@color/background"
                style="@style/Widget.AppCompat.Button.Borderless"
                />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
<com.google.android.material.tabs.TabLayout
    android:id="@+id/tabLayout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    app:layout_constraintTop_toBottomOf="@id/toolbar">
    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal"
        />
    <com.google.android.material.tabs.TabItem
        android:id="@+id/tabHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        />

</com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>