<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".FiltersForAnimalFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="55dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/background"
                android:src="@drawable/ic_arrow_left"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/filter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="20dp"
                android:textColor="@color/greyText"
                android:fontFamily="@font/inriasans_light"
                android:layout_gravity="center_vertical"
                />
            <Button
                android:id="@+id/reset_dtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/inriasans_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="175dp"
                android:background="@color/background"
                android:text="@string/reset"
                android:textColor="@color/teal_200"
                android:layout_gravity="center_vertical"
                android:onClick="onClick"
                />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/choose_animals_btns"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_cats"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/background"
            android:scaleType="fitXY"
            android:src="@drawable/cat_w"
            android:layout_marginLeft="25dp"
            app:layout_constraintTop_toTopOf="@id/choose_animals_btns"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/cat_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cats"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_cats"
            app:layout_constraintRight_toRightOf="@id/btn_cats"
            app:layout_constraintLeft_toLeftOf="@id/btn_cats"
            />

        <ImageButton
            android:id="@+id/btn_dogs"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/background"
            android:src="@drawable/dog_w"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="@id/choose_animals_btns"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <TextView
            android:id="@+id/dog_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dogs"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_dogs"
            app:layout_constraintRight_toRightOf="@id/btn_dogs"
            app:layout_constraintLeft_toLeftOf="@id/btn_dogs"
            />
        <ImageButton
            android:id="@+id/btn_others"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/background"
            android:src="@drawable/others_w"
            android:scaleType="fitXY"
            android:layout_marginRight="25dp"
            app:layout_constraintTop_toTopOf="@id/choose_animals_btns"
            app:layout_constraintRight_toRightOf="parent"

            />
        <TextView
            android:id="@+id/others_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:textSize="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_others"
            app:layout_constraintRight_toRightOf="@id/btn_others"
            app:layout_constraintLeft_toLeftOf="@id/btn_others"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filters_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/choose_animals_btns"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:id="@+id/show_btn"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/show_animals"
       android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Button1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>