<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SortForAnimalsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="55dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@color/background"
                android:src="@drawable/ic_arrow_left"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/filter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/inriasans_light"
                android:text="@string/sort"
                android:textColor="@color/greyText"
                android:textSize="20dp" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <RadioButton
            android:id="@+id/radio_alphabet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sortByAlphabetUp"
            android:textColor="@color/greyText"
            android:textSize="16sp"
            android:fontFamily="@font/inriasans_light"
            />
        <RadioButton
            android:id="@+id/radio_urgency"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/sortByUrgency"
            android:textColor="@color/greyText"
            android:textSize="16sp"
            android:fontFamily="@font/inriasans_light"
            />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>