<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AgeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="55dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/background"
            android:src="@drawable/ic_arrow_left"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/filter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20dp"
            android:textColor="@color/greyText"
            android:fontFamily="@font/inriasans_light"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <!--LinearLayout
        android:id="@+id/input_age"
        android:layout_width="320dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="18dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/inriasans_light"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/from_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="0"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            android:fontFamily="@font/inriasans_light"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/to_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/yaers5"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            />
    </LinearLayout-->
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <RadioButton
            android:id="@+id/radio_small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:buttonTint="@color/lightseagreen"
            android:fontFamily="@font/inriasans_light"
            android:textColor="@color/greyText"
            android:textSize="17sp"
            android:padding="7dp"
            android:text="@string/small_age"
            />
        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:buttonTint="@color/lightseagreen"
            android:fontFamily="@font/inriasans_light"
            android:textColor="@color/greyText"
            android:textSize="17sp"
            android:padding="7dp"
            android:text="@string/medium_age"
            />
        <RadioButton
            android:id="@+id/radio_adult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:buttonTint="@color/lightseagreen"
            android:fontFamily="@font/inriasans_light"
            android:textColor="@color/greyText"
            android:textSize="17sp"
            android:padding="7dp"
            android:text="@string/adult_age"
            />

    </RadioGroup>
    <Button
        android:id="@+id/accept_btn"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/accept_filter"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Button1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>