<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".NotEnterUserFragment">


    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logoxml"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Appname1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inriasans_bolditalic"
        android:text="Pet"
        android:textColor="@color/crimeson"
        android:textSize="31dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_logo"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_logo"
        app:layout_constraintVertical_bias="0.909" />

    <TextView
        android:id="@+id/tv_Appname2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inriasans_bolditalic"
        android:text="Box"
        android:textColor="@color/crimeson"
        android:textSize="31dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_logo"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_logo"
        app:layout_constraintVertical_bias="0.909"/>
    <TextView
        android:id="@+id/IF_text"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/notEnterIFMessage"
        android:textSize="18dp"
        android:fontFamily="@font/inriasans_bolditalic"
        android:textColor="@color/crimeson"
        android:layout_marginTop="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/DO_text"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inriasans_lightitalic"
        android:text="@string/notEnterDOMessage"
        android:textColor="@color/crimeson"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="@id/IF_text"
        app:layout_constraintTop_toBottomOf="@id/IF_text" />

    <Button
        android:id ="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        style="@style/Button1"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DO_text"
        android:onClick="enter"
        />

</androidx.constraintlayout.widget.ConstraintLayout>